fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ html,body {
   padding: 0;
   background-color: rgb(50, 20, 23) !important;
   font-family: "Vazirmatn", sans-serif;
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar-track {
   background: var(--scrollbar-bg);
